# axe-tree-sitter

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  build.cmd  build.sh  go.mod  grammar.js  highlights.scm  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-axe.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_axe/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterAxe/: axe.h
bindings/swift/TreeSitterAxeTests/: TreeSitterAxeTests.swift
src/: grammar.json  node-types.json  parser.c
